--- a/index.html
+++ b/index.html
@@ -1,112 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <style>
-    /* Remove the navbar's default margin-bottom and rounded borders */
-    .navbar {
-      margin-bottom: 0;
-      border-radius: 0;
-    }
+	<title>Bootstrap Example</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<style>
+		/* Remove the navbar's default margin-bottom and rounded borders */
+		.navbar {
+			margin-bottom: 0;
+			border-radius: 0;
+		}
 
-    /* Add a gray background color and some padding to the footer */
-    footer {
-      background-color: #f2f2f2;
-      padding: 25px;
-    }
-
-
-  </style>
+		/* Add a gray background color and some padding to the footer */
+		footer {
+			background-color: #f2f2f2;
+			padding: 25px;
+		}
+	</style>
 </head>
+
 <body>
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Portfolio</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <!--<ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">Contact</a></li>
-	</ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>-->
-      </ul>
-    </div>
-  </div>
-</nav>
+	<nav class="navbar navbar-inverse">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">The Portfolio of Kenneth A. Taylor</a>
+			</div>
+			<div class="collapse navbar-collapse" id="myNavbar">
+				<ul class="nav navbar-nav">
+					<li><a href="#">Contact: Saturniuns@gmail.com</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 
-<div class="jumbotron">
-  <div class="container text-center">
-    <h1>My Portfolio</h1>
-    <p>"Me and my (very few) projects"...</p>
-  </div>
-</div>
+	<div class="jumbotron">
+		<div class="container text-center">
+			<h1>My Portfolio</h1>
+			<p>"Me and my (very few) projects"...</p>
+			<p>I am a carpenter, plumber, electrician, roofer, HVAC installer, cook, physicist, college instructor, and acceptance test developer/automator. I have an AA Oregon Transfer degree, BS in Phyics, MS in Science Education, and now working
+				on a BS in Computer Science.</p>
+		</div>
+	</div>
 
-<div class="container-fluid bg-3 text-center">
-  <h3>Some of my Work</h3><br>
-  <div class="row">
-    <div class="col-sm-3">
-      <p>UX Design Class Project</p>
-	  <a href="https://xd.adobe.com/view/defbc280-df15-403e-a8b4-af1a1ed8b98e-8ba8/">
-      <img src="./CAPTURE.PNG" class="img-responsive" style="width:100%" alt="Image">
-  </a>
-    </div>
-    <!--<div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>-->
-  </div>
-</div><br>
+	<div class="container-fluid bg-3 text-center">
+		<h3>Some of my Work</h3><br>
+		<div>
+			<div>
+				<p>UX Design Class Project</p>
+				<a href="https://spark.adobe.com/page/JgUvWS5jlXfA1/">Spark Page</a><br><br>
+				<a href="https://xd.adobe.com/view/defbc280-df15-403e-a8b4-af1a1ed8b98e-8ba8/">
+					<img src="./CAPTURE.PNG" class="carpenter" alt="Image">
+				</a>
+			</div>
+		</div>
+	</div><br>
 
-<div class="container-fluid bg-3 text-center">
-  <div class="row">
-    <div class="col-sm-3">
-      <p>This is from a tutorial to learn more about HTML, CSS, and JavaScript.</p>
-	  <p>Hope you like the game!</p>
-	  <a href="./rock-paper-scissors/index.html">
-      <img src="./1200px-Rock-paper-scissors.svg.png" class="img-responsive" style="width:100%" alt="Image">
-  </a>
-    </div>
-    <!--<div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>-->
-  </div>
-</div><br><br>
+	<div class="container-fluid bg-3 text-center">
+		<div>
+			<div>
+				<p>This game is from a tutorial to learn more about HTML, CSS, and JavaScript.</p>
+				<p>Hope you like the game!</p>
+				<a href="./rock-paper-scissors/index.html">
+					<img src="./1200px-Rock-paper-scissors.svg.png" class="center" style="width:30%" alt="Image">
+				</a>
+				<p>For Rock Paper Scissors the problem was to make a game played by hand into a web game that made sense to play and felt natural.</p>
+				<p>The only development tool used was just a simple text editor.  The languages were HTML, CSS, and JavaScript.</p>
+				<p>Sketches</p>
+				<p>Brainstorming</p>
+				<p>User Surveys</p>
+				<p>Empathy maps</p>
+				<p>Prototypes</p>
+				<p>User Testing</p>
+				<p>Usability Heuristics</p>
+			</div>
+		</div>
+	</div><br><br>
 
-<footer class="container-fluid text-center">
-  <!--<p>Footer Text</p>-->
-</footer>
+	<footer class="container-fluid text-center">
+		<!--<p>Footer Text</p>-->
+	</footer>
 
 </body>
+
 </html>
