Portfolio finished, I hope.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<p><strong>Tools</strong></p>
 				<p>The only development tool used was just a simple text editor.  The languages were HTML, CSS, and JavaScript.</p>
 				<p><strong>Sketches</strong></p>
-				<a href="./Sketches/">
+				<a href="./Sketches/SCN_0013.pdf">
 					<img src="./rock-scissors-paper-silhouette-game-rock-scissors-paper-black-silhouette-clip-art_csp22592021.jpg" class="center" alt="Image">
 				</a>
 				<p><strong>Brainstorming</strong></p>
@@ -88,7 +88,7 @@
 				<p><strong>Empathy Maps</strong></p>
 				<p>Again, not user surveys mean no empathy maps for this project.  These do, however, help to focus in on what types of users will be using the app and what to focus most of the developing efforts on.  A small percentage of the users shouldn't complicate an app that could be simple to use and understand.</p>
 				<p><strong>Prototypes</strong></p>
-				<p>Prototypes</p>
+				<p>Since this was before the UX Design class I did what most CS students do, go directly to code.  There were no prototypes.  For something this simple it would be easy to overlook this step.  I can see now that it's not a waist of time.  This should have been done.</p>
 				<p><strong>User Testing</strong></p>
 				<p>I used the feedback from one user on this game after I had finished it.  They did have some questions as to if the computer ever went first, how to clear the score board, how do you keep track of a tie, and if you could play with another person online.  It was easier to let the person go first every time but since it's a game where technically both players go at the same time, that it didn't really matter.  I hadn't even thought of clearing the score board, so this is a feature that definitly would be handy to have.  The tie situation also never really occured to me since neither players score would change at that point.  The next step would be to take this to a two player online game although many changes would need to be made.  Adding a server to the mix would be a minimum change.</p>
 				<p><strong>Usability Heuristics</strong></p>
