--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
 				</a>
 			</div>
 		</div>
-	</div><br>
+	</div><br><br>
 
 	<div class="container-fluid bg-3 text-center">
 		<div>
 			<div class="container text-center">
+			<p>......................................................................................................</p><br><br>
 				<p>This game is from a tutorial to learn more about HTML, CSS, and JavaScript.</p>
 				<p>Hope you like the game!</p>
 				<a href="./rock-paper-scissors/index.html">
