--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<h3>Some of my Work</h3><br>
 		<div>
 			<div>
-				<p>UX Design Class Project</p>
+				<p><strong>UX Design Class Project</strong></p>
 				<a href="https://spark.adobe.com/page/JgUvWS5jlXfA1/">Spark Page</a><br><br>
 				<a href="https://xd.adobe.com/view/defbc280-df15-403e-a8b4-af1a1ed8b98e-8ba8/">
 					<img src="./Capture.PNG" class="carpenter" alt="Image">
